# yeoul

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_KO.md
.github/workflows/: ci.yml
docs/: BOOTSTRAP_PROMPT.md  METHODOLOGY.md
examples/: demo.sh
mcp/: README.md  pyproject.toml
mcp/yeoul_mcp/: __init__.py  server.py
setup/: install.sh  mcp-servers.json  pre-publish-check.sh
templates/: spec.md
tests/: test_gates.sh
